# 3d-engine

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
CMake/: oglConfig.cmake.in
CMake/Modules/: Findglfw.cmake
common/: :w  CMakeLists.txt  a.out  meta.cpp
common/meta/: CMakeLists.txt
common/meta/include/meta/: apply.hpp  curry.hpp  foreach.hpp  has.hpp  head.hpp  invoke.hpp  meta.hpp  min.hpp  pack.hpp  push.hpp  remove.hpp  select.hpp  sort.hpp  subset.hpp  tail.hpp  traits.hpp  unique.hpp
common/meta/test/: CMakeLists.txt  main.cpp
example/: CMakeLists.txt  main.cpp
example/object-engine-example/: CMakeLists.txt
example/object-gl-example/: CMakeLists.txt  main.cpp
example/object-gl-example/res/shader/: transform.vs
example/res/shader/: coordinate.fs  coordinate.vs  transform.fs
object-engine/include/oen/: light.h  render.h
object-engine/include/oen/materials/: phong.h
object-engine/include/oen2/: textured.h
object-gfx/: CMakeLists.txt
object-gfx/include/ox/: entity.h
object-gfx/test/: CMakeLists.txt  main.cpp
object-gl/: CMakeLists.txt
object-gl/include/ogl/: loader.h  param.h  program.h  render.h  vertexarray.h
object-gl/src/: loader.cpp  program.cpp
ogl/: CMakeLists.txt
ogl/include/ogl/: program.h
src/: loader.cpp  shader.cpp
